--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,24 @@
 node_modules
+../Ruby
+./DOM-MANIP/.vscode/launch.json
+./Live-coding/
+./Menu Burger/
+./Ruby
+./Dev/
+././Synology drive/
+.Synology Drive/
+./cowsay/
+../my-super-website
+../.DS_Store
+../.gitignore
+../Adopte a cat/
+../CSS-BOX-MODEL/
+../DOM-MANIP/
+../Decode le message /
+../Merge-Conflits/
+../Parcel/
+../exo-cowsay/
+../hello-world/
+../remote-full-time-juin/
+../wild-git/
+../wild-project/
